# piscine-datascience

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  vagrantfile
module_00/: .env.example  .gitignore  README.md
module_00/ex00/: .env  docker-compose.yml
module_00/ex01/: .gitkeep  docker-compose.yml
module_00/ex02/: table.sh  table.sql
module_00/ex02/scripts/: entrypoint.sh  table.sql
module_00/ex03/: automatic_table.sh  automatic_table.sql  docker-compose.yml
module_00/ex04/: docker-compose.yml  items_table.sh  items_table.sql  postgresql_analytics.sql
module_01/: .gitignore  README.md
module_01/ex00/: .gitkeep  docker-compose.yml
module_01/ex00/conf/: pgpass
module_01/ex01/: customers_table.sh  customers_table.sql
module_01/ex02/: docker-compose.yml  remove_duplicates.sh  remove_duplicates.sql  remove_duplicates_pgadmin.sql
module_01/ex03/: fusion.sh
module_02/: README.md
module_02/ex00/: pie.ipynb  pie.py
module_02/ex01/: chart.py
module_02/ex02/: mustache.py
module_02/ex03/: Building.py
module_02/ex04/: elbow.py
module_02/ex05/: Clustering.py
module_03/ex00/: Histogram.ipynb
module_03/ex01/: Correlation.ipynb
module_03/ex02/: points.ipynb
module_03/ex03/: standardization.ipynb
module_03/ex04/: Normalization.ipynb
module_03/ex05/: .gitignore  split.ipynb
module_04/ex00/: .gitignore  Confusion_Matrix.ipynb  predictions.txt  truth.txt
resources/: Intra Projects Data Science - 3 Edit.html
resources/Intra Projects Data Science - 3 Edit_files/: js
subjects/: 04-The-present.txt  05-The-futur.txt
(+10 files in other folders)
